SQLK8sOperator/deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mssql-system
  labels:
    app.kubernetes.io/name: mssql-operator
    app.kubernetes.io/part-of: mssql-operator
